packages/typ/tests/fixtures/diagnostics/0091_core_apply_non_function_08.ml.expected
File "0091_core_apply_non_function_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0091_core_apply_non_function_08 is not a valid module name.

File "0091_core_apply_non_function_08.ml", line 3, characters 2-7:
3 |   theta 8
      ^^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
